examples/k8stest/conf/TLSRoute/Basic/03_TLSRoute.yaml
# TLSRoute basic: TLS terminate + TCP forward (K8s)
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: tls-route-basic
  namespace: edgion-test
spec:
  parentRefs:
    - name: tls-route-basic-gw
      namespace: edgion-test
      sectionName: tls-basic
  hostnames:
    - "*.sandbox.example.com"
  rules:
    - backendRefs:
        - name: test-tcp
          port: 30010
          weight: 100
